--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "botica-bot-example",
-  "author": "Author",
+  "name": "botica-bot-telegram-frontend",
+  "author": "Alberto Mimbrero",
   "version": "1.0.0",
-  "imageTag": "botica-bot-example",
-  "description": "Seed for Botica Node bots using botica-lib-node",
+  "imageTag": "botica-bot-telegram-frontend",
+  "description": "",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "build": "tsc",
+    "start": "node dist/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/isa-group/botica-bot-telegram-frontend.git"
   },
   "license": "MIT",
   "dependencies": {
-    "botica-lib-node": "^0.0.2"
+    "botica-lib-node": "^0.2.2",
+    "grammy": "^1.35.0",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.9",
+    "@types/node-fetch": "^2.6.12",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2"
   }
 }
